# src/api/routers/user_router.go
@@ -3,11 +3,12 @@ package routers
 import (
 	"github.com/gin-gonic/gin"
 	"github.com/mohsen104/web-api/api/handlers"
+	"github.com/mohsen104/web-api/api/middlewares"
+	"github.com/mohsen104/web-api/config"
 )
 
-func User(r *gin.RouterGroup) {
-	handler := handlers.NewUserHandler()
+func User(r *gin.RouterGroup, cfg *config.Config) {
+	handler := handlers.NewUserHandler(cfg)
 
-	r.GET("/", handler.User)
-	r.GET("/:id", handler.User)
+	r.POST("/send-otp", middlewares.OtpLimiter(cfg), handler.SendOtp)
 }
