# src/docs/swagger.json
@@ -4,9 +4,9 @@
         "contact": {}
     },
     "paths": {
-        "/v1/users": {
-            "get": {
-                "description": "Get user",
+        "/v1/users/send-otp": {
+            "post": {
+                "description": "Send otp",
                 "consumes": [
                     "application/json"
                 ],
@@ -16,9 +16,20 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "Get user",
+                "summary": "Send otp",
+                "parameters": [
+                    {
+                        "description": "GetOtpRequest",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/services.GetOtpRequest"
+                        }
+                    }
+                ],
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": "Success",
                         "schema": {
                             "$ref": "#/definitions/github_com_mohsen104_web-api_api_helper.BaseHttpResponse"
@@ -29,40 +40,8 @@
                         "schema": {
                             "$ref": "#/definitions/github_com_mohsen104_web-api_api_helper.BaseHttpResponse"
                         }
-                    }
-                }
-            }
-        },
-        "/v1/users/{id}": {
-            "get": {
-                "description": "Get user by id",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Get user by id",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_mohsen104_web-api_api_helper.BaseHttpResponse"
-                        }
                     },
-                    "400": {
+                    "409": {
                         "description": "Failed",
                         "schema": {
                             "$ref": "#/definitions/github_com_mohsen104_web-api_api_helper.BaseHttpResponse"
@@ -106,6 +85,19 @@
                 },
                 "value": {
                     "type": "string"
+                }
+            }
+        },
+        "services.GetOtpRequest": {
+            "type": "object",
+            "required": [
+                "mobileNumber"
+            ],
+            "properties": {
+                "mobileNumber": {
+                    "type": "string",
+                    "maxLength": 11,
+                    "minLength": 11
                 }
             }
         }
